.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>ATDSA_bookshelf__Assign_multi_category__c</fullName>
        <formula>HYPERLINK(&quot;/apex/&quot; + IF(ISBLANK($Setup.ATDSA_bookshelf__DSA_App_Setting__c.ATDSA_bookshelf__Package_Name__c), &quot;&quot;, $Setup.ATDSA_bookshelf__DSA_App_Setting__c.ATDSA_bookshelf__Package_Name__c + &quot;__&quot;) + &quot;AssignCategories?contentid=&quot;+ Id, &quot;Click Here&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign multi category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shareable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Internal_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to define a document to be Internal only. The document will Only show up in Internal Mode for a Given Configuration.</description>
        <label>Internal Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__IsFeatured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>How To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skyscraper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <label>Competitive</label>
        <picklist>
            <picklistValues>
                <fullName>CarGurus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARFAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarsforSale.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic, eBay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TrueCar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSA_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this field flags a piece of content as being part of the DSA/Ignition App.</description>
        <inlineHelpText>Check this box if this content is displayed on the DSA/Ignition App.</inlineHelpText>
        <label>DSA Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Services__c</fullName>
        <label>Dealer Services</label>
        <picklist>
            <picklistValues>
                <fullName>Core Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Aids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Topics__c</fullName>
        <label>Hot Topics</label>
        <picklist>
            <picklistValues>
                <fullName>CDJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Papers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB__c</fullName>
        <label>KBB</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valuations Resources</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>All Makes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Insights__c</fullName>
        <label>Market Insights</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Shopper/Buyer Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry White Papers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millennial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing Studies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <label>Reporting</label>
        <picklist>
            <picklistValues>
                <fullName>AMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Scorecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tune Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Freshness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIM__c</fullName>
        <label>TIM</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Local Market Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Videos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>ATC_Dealer_Services</fullName>
        <active>true</active>
        <label>ATC Dealer Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Type</fullName>
        <active>true</active>
        <label>Asset Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Co_op</fullName>
        <active>true</active>
        <label>Co-op</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_Sales</fullName>
        <active>true</active>
        <label>Old_Dealer Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGSS</fullName>
        <active>true</active>
        <label>NGSS</label>
    </recordTypes>
    <recordTypes>
        <fullName>OEM</fullName>
        <active>true</active>
        <label>OEM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
</CustomObject>